# EagleVision

./: .gitattributes  .gitignore  README.md  kaggle_depth_anything_v2_low_compute.ipynb  main.py  pyproject.toml
baseline/: __init__.py
baseline/depth_anything_v2/: __init__.py  checkpoint_registry.py  cli.py  downloader.py  inference.py  io_utils.py  modeling.py  transforms.py
configs/data/: scannet.yaml
configs/eval/: default.yaml  hourly.yaml  phase1_kaggle_complete.yaml
configs/model/: depth_adapter.yaml  roundtrip.yaml
configs/train/: phase1.yaml  phase1_hourly.yaml  phase1_kaggle_complete.yaml
docs/: architecture.md  experiments.md  kaggle_submission.md  phase1_scope.md  repository_guide.md  training_plan.md
notebooks/: README.md  eaglevision_ablation_report.md  eaglevision_hyperparameter_ablation_local_cuda_v3_unicode_single_progress.ipynb  kaggle-ablations.ipynb  kaggle_phase1_complete.ipynb  kaggle_phase1_eval_infer.ipynb  kaggle_phase1_setup_train.ipynb
notebooks/phase1_adapted_longrun/: README.md  best_100ep.pt
scripts/: prepare_scannet.py  run_compare_baseline_vs_adapted.sh  run_demo.sh  run_eval.sh  run_train.sh
src/eaglevision/: __init__.py
src/eaglevision/cli/: __init__.py  compare_models.py  demo_roundtrip.py  eval.py  infer_depth.py  render_novel_view.py  train.py
src/eaglevision/data/: README.md  collate.py  pair_sampler.py  scannet_dataset.py  transforms.py
src/eaglevision/engine/: checkpointing.py  logging.py  (+2 more)
tests/: test_fusion.py  test_geometry.py  test_intrinsics.py  test_pair_sampler.py  test_shapes.py  test_visibility.py
(+27 files in other folders)
